# Solana-presale-IDO-smart_contract

./: .gitignore  Anchor.toml  README.md  package.json
client/: index.ts
client/actions/: initialize.ts  updateSetting.ts
client/utils/: index.ts
programs/solmate-presale/: Cargo.toml
programs/solmate-presale/src/: constant.rs  error.rs  lib.rs  state.rs  utils.rs
programs/solmate-presale/src/processor/: buy.rs  initialize.rs  mod.rs  update_setting.rs
tests/: solmate-presale.ts
