[package]
name = "solmate-presale"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solmate_presale"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = {version="0.24.2", features=["init-if-needed"]}
anchor-spl = "0.24.2"
spl-token = {version = "~3.2.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "~1.0.3", features = ["no-entrypoint"]}